syntax = "proto3";

option go_package = "github.com/sushant102004/Traffic-Toll-Microservice/types";

service DistanceAggregator {
    rpc AggregateDistance(DistanceAggregateRequest) returns (None);
}

message None {}

message DistanceAggregateRequest {
    int32 ObuID = 1;
    double Value = 2;
    int64 Unix = 3;
}